// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`width/height: height-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "height": {
      "setterCode": "setStyleHeight(50, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`width/height: height-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: height-100px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "height": {
      "setterCode": "setStyleHeight(100, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(100, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`width/height: height-100px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: height-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "height": {
      "setterCode": "setStyleHeight(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
  },
}
`;

exports[`width/height: height-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: max-height-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-height",
        "important": false,
        "prop": "maxHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`max-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: max-height-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-height",
        "important": false,
        "prop": "maxHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`max-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: max-height-100px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "max-height": {
      "setterCode": "setStyleMaxHeight(100, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(100, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`width/height: max-height-100px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: max-height-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-height",
        "important": false,
        "prop": "maxHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`max-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: max-height-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-height",
        "important": false,
        "prop": "maxHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`max-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: max-width-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-width",
        "important": false,
        "prop": "maxWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`max-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: max-width-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-width",
        "important": false,
        "prop": "maxWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`max-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: max-width-100px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "max-width": {
      "setterCode": "setStyleMaxWidth(100, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(100, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`width/height: max-width-100px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: max-width-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-width",
        "important": false,
        "prop": "maxWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`max-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: max-width-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "max-width",
        "important": false,
        "prop": "maxWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`max-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-height-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-height",
        "important": false,
        "prop": "minHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`min-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-height-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-height",
        "important": false,
        "prop": "minHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`min-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-height-100px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "min-height": {
      "setterCode": "setStyleMinHeight(100, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(100, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`width/height: min-height-100px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: min-height-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-height",
        "important": false,
        "prop": "minHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`min-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-height-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-height",
        "important": false,
        "prop": "minHeight",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`min-height\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-width-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-width",
        "important": false,
        "prop": "minWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`min-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-width-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-width",
        "important": false,
        "prop": "minWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "50%",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`50%\` is not supported for \`min-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-width-100px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "min-width": {
      "setterCode": "setStyleMinWidth(100, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(100, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`width/height: min-width-100px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: min-width-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-width",
        "important": false,
        "prop": "minWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`min-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: min-width-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "min-width",
        "important": false,
        "prop": "minWidth",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`min-width\` (supported values are: \`number\`|\`pixel\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`width/height: width-50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "width": {
      "setterCode": "setStyleWidth(50, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`width/height: width-50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: width-100px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "width": {
      "setterCode": "setStyleWidth(100, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(100, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`width/height: width-100px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`width/height: width-auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "width": {
      "setterCode": "setStyleWidth(0, UniCSSUnitType.AUTO)",
      "valueCode": "new UniCSSUnitValue(0, UniCSSUnitType.AUTO)",
    },
  },
}
`;

exports[`width/height: width-auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;
